--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,13 @@
 
   <link rel="icon" type="image/svg+xml" class="favicon" href="icon/favicon.svg" />
 
-  <style media="screen" type="text/css">html,body {background-color: rgb(0, 0, 0);}@media (prefers-color-scheme: dark) {html,body {background-color: rgb(0, 0, 0);}}@media (prefers-color-scheme: light) {html,body {background-color: rgb(255, 255, 255);}}</style>
-
-  <script src="initialBackground.js" async></script>
+  <style>html,body{background:var(--ios-bg,#f7f7fa);margin:0;padding:0;width:100vw;height:100vh;}</style>
 
 </head>
 
-<body></body>
+<body>
+  <div id="root"></div>
+  <!-- Webpack will inject the correct script tag -->
+</body>
 
 </html>
